<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.onboarding.OnBoarding">


    <androidx.viewpager.widget.ViewPager
        android:id="@+id/screenPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name">

    </androidx.viewpager.widget.ViewPager>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/next"
            app:layout_constraintStart_toEndOf="@+id/prev"
            app:layout_constraintTop_toTopOf="parent"
            app:tabBackground="@drawable/indicator_selector"
            app:tabIndicatorHeight="0dp" />

        <TextView
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/next"
            android:textColor="@color/purple_700"
            android:textColorLink="@color/purple_700"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/prev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/prev"
            android:textColor="@color/purple_700"
            android:textColorLink="@color/purple_700"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/get_started"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="@color/orange_700"
            android:text="@string/get_started"
            android:textColor="@color/purple_700"
            app:iconTint="@color/orange_700"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:visibility="invisible" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>